@@ -1,5 +1,5 @@
 Credits and contributors for driftnet
-$Id: CREDITS,v 1.8 2003/08/25 12:23:43 chris Exp $
+$Id: CREDITS,v 1.9 2004/04/26 14:42:36 chris Exp $
 
 Thanks to the authors of EtherPEG, for a cool idea, and to Eric Richardson,
 whose website brought it to my attention.
@@ -18,4 +18,6 @@ Joshua Wright for some 802.11 fixes.
 
 Rob Timko and Joshua Wright for getting Driftnet working on wireless networks
 and reading decrypted data from Kismet.
+
+Bastien Nocera for updating driftnet to use GTK2.
 
