@@ -6,7 +6,7 @@
 .\" Copyright (c) 2002 Chris Lightfoot. All rights reserved.
 .\" Email: chris@ex-parrot.com; WWW: http://www.ex-parrot.com/~chris/
 .\"
-.\" $Id: driftnet.1.in,v 1.6 2003/06/13 15:51:44 chris Exp $
+.\" $Id: driftnet.1.in,v 1.7 2004/04/26 14:42:36 chris Exp $
 .\"
 
 .SH NAME
@@ -36,6 +36,7 @@ Print a summary of usage.
 .TP
 \fB-v\fP
 Print additional details of packets captured to the terminal.
+.TP
 \fB-b\fP
 Beep when a new image is displayed.
 .TP
@@ -103,7 +104,7 @@ Chris Lightfoot <chris@ex-parrot.com>
 .SH VERSION
 \fBDriftnet\fP, version @@@VERSION@@@.
 .br
-$Id: driftnet.1.in,v 1.6 2003/06/13 15:51:44 chris Exp $
+$Id: driftnet.1.in,v 1.7 2004/04/26 14:42:36 chris Exp $
 
 .SH COPYING
 This program is free software; you can redistribute it and/or modify
